--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-nav {
+/* nav {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -11,7 +11,7 @@ nav {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  width: 70%;
+  width: 70%; */
 }
 
 .text-white {
